--- a/osw vlc.ipynb
+++ b/osw vlc.ipynb
@@ -215,6 +215,11 @@
     "        if val != self.mediaplayer.get_time():\n",
     "            self.mediaplayer.set_time(val)\n",
     "\n",
+    "      #추가점수 1항: Mini_player 종료 전까지 영상 무한 반복 코드\n",
+    "        if self.mediaplayer.get_state() == vlc.State.Ended:\n",
+    "            self.mediaplayer.set_time(0)  # 처음부터 다시 재생\n",
+    "            self.mediaplayer.play()\n",
+    "\n",
     "    def update_statusbar(self):\n",
     "        mtime = QtCore.QTime(0, 0, 0, 0)\n",
     "        time = mtime.addMSecs(self.mediaplayer.get_time())\n",
