반복재생 코드오류(원래로 되돌아옴)

--- a/osw vlc.ipynb
+++ b/osw vlc.ipynb
@@ -10,10 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pafy\n",
-      "  Downloading pafy-0.5.5-py2.py3-none-any.whl (35 kB)\n",
-      "Installing collected packages: pafy\n",
-      "Successfully installed pafy-0.5.5\n",
+      "Requirement already satisfied: pafy in c:\\users\\yjypc\\anaconda3\\lib\\site-packages (0.5.5)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -63,6 +60,14 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\YJYPC\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3468: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -215,10 +220,10 @@
     "        if val != self.mediaplayer.get_time():\n",
     "            self.mediaplayer.set_time(val)\n",
     "\n",
-    "      #추가점수 1항: Mini_player 종료 전까지 영상 무한 반복 코드\n",
+    "      \"\"\"#추가점수 1항: Mini_player 종료 전까지 영상 무한 반복 코드\n",
     "        if self.mediaplayer.get_state() == vlc.State.Ended:\n",
     "            self.mediaplayer.set_time(0)  # 처음부터 다시 재생\n",
-    "            self.mediaplayer.play()\n",
+    "            self.mediaplayer.play() \"\"\"\n",
     "\n",
     "    def update_statusbar(self):\n",
     "        mtime = QtCore.QTime(0, 0, 0, 0)\n",
