추가점수2번_제일 위에 있도록

--- a/osw vlc.ipynb
+++ b/osw vlc.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "from PyQt5 import QtWidgets, QtGui, QtCore\n",
     "import vlc\n",
-    "#from network import Client\n",
+    "#from network import Client \n",
     "\n",
     "\n",
     "class MiniPlayer(QtWidgets.QMainWindow):\n",
@@ -136,6 +136,7 @@
     "\n",
     "        self.data_queue = data_queue\n",
     "        self.timer.start()\n",
+    "        self.setWindowFlags(QtCore.Qt.WindowStaysOnTopHint)\n",
     "\n",
     "    def init_ui(self):\n",
     "        \"\"\"Set up the user interface\n",
