동영상업로드

--- a/osw vlc.ipynb
+++ b/osw vlc.ipynb
@@ -242,7 +242,7 @@
     "    player.show()\n",
     "    player.resize(480, 480)\n",
     "\n",
-    "     _ = Client(\"localhost\", 10000, data_queue)\n",
+    "    # _ = Client(\"localhost\", 10000, data_queue)\n",
     "    sys.exit(app.exec_())\n",
     "\n",
     "if __name__ == \"__main__\":\n",
