--- a/osw vlc.ipynb
+++ b/osw vlc.ipynb
@@ -49,28 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fb00f6cc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\YJYPC\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3468: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#! /usr/bin/env python3\n",
@@ -138,7 +120,7 @@
     "        self.timer.start()\n",
     "        self.setWindowFlags(QtCore.Qt.WindowStaysOnTopHint)\n",
     "    \n",
-    "        \n",
+    "            \n",
     "    def init_ui(self):\n",
     "        \"\"\"Set up the user interface\n",
     "        \"\"\"\n",
@@ -196,11 +178,14 @@
     "\n",
     "    def update_ui(self):\n",
     "        self.update_statusbar()\n",
+    "        if self.mediaplayer.get_state() == vlc.State.Ended:\n",
+    "            self.mediaplayer.set_media(self.mediaplayer.get_media())\n",
+    "            self.mediaplayer.play()\n",
     "        \n",
     "        try:\n",
     "            val = self.data_queue.get(block=False)\n",
     "        except queue.Empty:\n",
-    "             return\n",
+    "            return\n",
     "\n",
     "        if val == '<':\n",
     "            self.mediaplayer.set_rate(self.mediaplayer.get_rate() * 0.5)\n",
@@ -222,8 +207,6 @@
     "        if val != self.mediaplayer.get_time():\n",
     "            self.mediaplayer.set_time(val)\n",
     "         \n",
-    "         \n",
-    "\n",
     "\n",
     "    def update_statusbar(self):\n",
     "        mtime = QtCore.QTime(0, 0, 0, 0)\n",
@@ -237,7 +220,7 @@
     "    app = QtWidgets.QApplication(sys.argv)\n",
     "\n",
     "    data_queue = queue.Queue()\n",
-    "\n",
+    "                \n",
     "    player = MiniPlayer(data_queue)\n",
     "    player.show()\n",
     "    player.resize(480, 480)\n",
@@ -250,6 +233,14 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01f6fd9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
